--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,13 +4,13 @@ Theme URI:
 Author: Leandro Galeano
 Author URI:
 Description: Tema personalizado para nahueclandestino.com
-Version: 1.0.7
+Version: 1.0.8
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: clandestino
 */
 
-@import url('https://fonts.googleapis.com/css?family=Montserrat:200,400,700&display=swap');
+// @import url('https://fonts.googleapis.com/css?family=Montserrat:200,400,700&display=swap');
 @import './bootstrap/bootstrap';
 @import 'simplelightbox';
 @import 'functions';
